# bxi_code

./: README.md
31tof_mujoco/: collect_data2_last.py
31tof_mujoco/model/elf2_31_arm/: elf2_31_arm.xml
Arduino/sketch_oct9a/: sketch_oct9a.ino
Arduino/sketch_sep13a/: sketch_sep13a.ino
WT_RTK/: gps_receiver.py  read_com20 win.py  read_com20.py  read_com20_linux.py
WT_RTK/navigation2/data/: 121.496885_121.496885_路径.shp  121.496885_121.496885_路径.shx
WT_RTK/navigation2/src/: README.md
code/: sim_test.py
data_collect/: image_sever.py
data_collect_hw/: collected_data.py  readme.md
data_collect_mujoco/: main.py  readme.md
data_collect_mujoco/model/cups/: model.xml
data_collect_mujoco/model/elf2_31_arm/: elf2_31_arm_1.xml
livox/localizer/: CMakeLists.txt  package.xml
livox/localizer/config/: bxi_map.yaml  map.pgm  nav2_params.yaml  pointcloud_to_laserscan.yaml
livox/localizer/launch/: navigation_launch.py
livox/localizer/script/: cmd_vel_to_motion.py
livox/localizer/src/: cmd_vel_to_motion.cpp  localizer_node.cpp
livox/navigation2/: goal_action.py
math/: camera.py  data_process.py  ros.py
model/: last.xml
mujoco/test/: main.py
navigation2/data/: 121.496885_121.496885_路径.dbf
navigation2/install/: local_setup.sh  setup.sh
navigation2/log/: latest_build
navigation2/src/localizer/: CMakeLists.txt
note/: angle.cpp  readme.md  remote_control.py  ros.py
note/.obsidian/: workspace.json
note/VNC/: 常见问题.md
note/arduino/: 一些问题.md
note/git/: git 一些命令.md
note/navgation2/: some problem.md  学习收获.md  学习流程.md
note/orangepi/: 常见问题.md
note/socket/: camera_socket_publish.py  camera_socket_server.py
note/voice/: 复现流程.md  常见问题.md
pic/: gravity_compensation_results.txt  xiaoshen.py
pic/src/: 31tof_pic_hw.py  31tof_pic_mujoco.py  beifen.py  start.sh  test.py
remote_arm/code/: pic_control.py
remote_arm/code/control/: launch.sh
sheel/: example.sh
tools/: joy_example.cpp  readme.md
v1.1/code/: arm_test.py  bxi_dp_output.py  get_data.py  pic_control copy.py
v1.1/esp32/sketch_oct9a/: sketch_oct9a.ino
voice/: vvui_deno.pcm
voice/wheeltec_mic/wheeltec_mic_ros2/: CMakeLists.txt
voice/ws_voice/install/: local_setup.sh  setup.sh
voice/ws_voice/log/: latest_build
voice/ws_voice/src/voice_pkg/: CMakeLists.txt  M2_SDK_INTEGRATION.md  package.xml
voice/ws_voice/src/voice_pkg/launch/: voice_llm.launch.py
voice/ws_voice/src/voice_pkg/src/: m2_voice_node.cpp  talker.cpp  voice_llm_node.cpp
(+120 files in other folders)
